--- a/Css/Master.css
+++ b/Css/Master.css
@@ -436,6 +436,15 @@ margin-bottom: 5px;
     top:-40px;
 
 }
+@media(max-width:767)
+{
+    .about .container .about-content .image::after
+{
+     width: 100px;
+    height:270px;
+}
+    
+}
 @media (max-width:991px)
 {
     .about .container .about-content .image::after
